添加AppUpdateTool来为应用更新生成索引数据