@@ -86,6 +86,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.13.2</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -144,38 +149,40 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <configuration>
-                    <transformers>
-                        <transformer
-                                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                        <transformer
-                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>${mainClass}</mainClass>
-                        </transformer>
-                    </transformers>
-                    <outputDirectory>${project.build.directory}/jars</outputDirectory>
-                    <finalName>${project.artifactId}-${project.version}-shade</finalName>
-                </configuration>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
                 <executions>
                     <execution>
+                        <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>module-info.class</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
+                            <outputDirectory>${project.build.directory}/jars</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${mainClass}</mainClass>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                    <excludes>
+                        <exclude>module-info.class</exclude>
+                    </excludes>
+                    <outputDirectory>${project.build.directory}/jars</outputDirectory>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -201,10 +208,8 @@
                                 <argument>
                                     ${project.build.directory}/jars
                                 </argument>
-                                <argument>--main-class</argument>
-                                <argument>${mainClass}</argument>
                                 <argument>--main-jar</argument>
-                                <argument>${project.artifactId}-${project.version}-shade.jar</argument>
+                                <argument>${project.artifactId}-${project.version}.jar</argument>
                                 <argument>--dest</argument>
                                 <argument>${project.build.directory}/buildImage</argument>
                                 <argument>--icon</argument>
@@ -219,32 +224,12 @@
                                 <argument>-Dprism.allowhidpi=true</argument>
                                 <argument>--java-options</argument>
                                 <argument>--enable-native-access=ALL-UNNAMED</argument>
+                                <argument>--add-launcher</argument>
+                                <argument>AppUpdateTool=launcher/AppUpdateTool.properties</argument>
                             </arguments>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <stripDebug>true</stripDebug>
-                    <compress>2</compress>
-                    <noHeaderFiles>true</noHeaderFiles>
-                    <noManPages>true</noManPages>
-                    <launcher>JavaFXSample</launcher>
-                    <jlinkImageName>build-link</jlinkImageName>
-                    <jlinkZipName>sample-zip</jlinkZipName>
-                    <mainClass>sample/com.icuxika.MainApp</mainClass>
-                    <options>
-                        <option>--enable-native-access=sample</option>
-                        <option>--enable-native-access=javafx.graphics</option>
-                        <option>-Dsun.stdout.encoding=UTF-8</option>
-                        <option>-Djavafx.enablePreview=true</option>
-                        <option>-Djavafx.suppressPreviewWarning=true</option>
-                    </options>
-                </configuration>
             </plugin>
         </plugins>
     </build>
